--- a/HomeMenu/CollapsedLinkButtons.css
+++ b/HomeMenu/CollapsedLinkButtons.css
@@ -1,3 +1,8 @@
+/*For changing the color of the SVG images*/
+.privateChannels-1nO12o .channel-2QD9_O a:not([href*="/channels/@me/"]) svg path:first-of-type {
+    fill: white;
+}
+
 .privateChannels-1nO12o .channel-2QD9_O a:not([href*="/channels/@me/"]) .name-2WpE7M {
 	display: none;
 }
