--- a/ChannelsWrapper/RemoveBanner.css
+++ b/ChannelsWrapper/RemoveBanner.css
@@ -13,6 +13,6 @@
 	transition:background-color .15s ease;
 }
 
-#app-mount .channels-Ie2l6A .scrollerWrap-2lJEkd .scroller-2FKFPG > div:first-of-type:not([class*="container"]), #app-mount .da-channels .da-scrollerWrap .da-scroller > div:first-of-type:not([class*="container"]) {
+#app-mount .channels-Ie2l6A .scrollerWrap-2lJEkd .scroller-2FKFPG > div:first-of-type[style*="height: 78px"]:not([class*="container"]), #app-mount .da-channels .da-scrollerWrap .da-scroller > div:first-of-type[style*="height: 78px"]:not([class*="container"]) {
     height:0!important;
 }
